# Automation_Labs

./: .gitignore  README.md
CAD/: README.md  config.json  pyproject.toml
CAD/src/: cad_processor.py
SDF/: README.md  config.json  pyproject.toml
SDF/scripts/: sdf_validate_outputs.py
SDF/src/: sdf_anonymizer.py  sdf_anonymizer_local.py  sdf_processor.py  sdf_processor_local.py
